# Full-Stack-RAG

./: README.md  main.py  pyproject.toml  requirements.txt  test.py
.github/workflows/: task_defination.json
data/: agenticAI.txt
multi_doc_chat/config/: config.yaml
multi_doc_chat/exception/: custom_exception.py
multi_doc_chat/logger/: custom_logger.py
multi_doc_chat/model/: models.py
multi_doc_chat/src/document_ingestion/: data_ingestion.py
multi_doc_chat/utils/: config_loader.py  model_loader.py
notebook/: RAG.ipynb  evaluations.ipynb  experiments.ipynb
static/: script.js  styles.css
templates/: index.html
test/: conftest.py
test/integration/: test_chat_route.py  test_upload_route.py
test/unit/: test_data_ingestion.py  test_retrieval.py
